<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_bar_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/profile"
        android:textAppearance="@style/Text.Semibold.24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Профиль" />

    <ImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_guideline"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/Text.Medium.18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_pic"
        app:layout_constraintTop_toBottomOf="@id/top_bar_guideline"
        tools:text="Александра Новикова" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/Text.Light.12.Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_pic"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="Светлое будущее живет в вечности" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_user_main_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iv_profile_pic,tv_name,tv_about" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_city,tv_city_title,divider_city" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_city_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/city"
        android:textAppearance="@style/Text.Regular.12.Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_user_main_info"
        tools:text="Город" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:textAppearance="@style/Text.Regular.18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_city_title"
        tools:text="Санкт-Петербург" />

    <View
        android:id="@+id/divider_city"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:alpha="0.04"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_city" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_phone,tv_phone_title,divider_phone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_phone_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textAppearance="@style/Text.Regular.12.Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_city"
        tools:text="Телефон" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:textAppearance="@style/Text.Regular.18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_title"
        tools:text="+7 (123) 456 78 90" />

    <View
        android:id="@+id/divider_phone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:alpha="0.04"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_phone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_email,tv_email_title,divider_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textAppearance="@style/Text.Regular.12.Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_phone"
        tools:text="Почта" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:textAppearance="@style/Text.Regular.18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        tools:text="alexandra@surfstudio.ru" />

    <View
        android:id="@+id/divider_email"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:alpha="0.04"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <orlov.surf.summer.school.ui.view.LoaderButtonView
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:clickable="true"
        android:focusable="true"
        app:btnText="@string/exit"
        app:isLoading="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/fl_block_action"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>